add favorite function.

--- a/android/app/src/main/res/drawable/launch_background.xml
+++ b/android/app/src/main/res/drawable/launch_background.xml
@@ -3,7 +3,7 @@
     <item android:drawable="@mipmap/bg_splash" />
     <item>
         <bitmap
-            android:gravity="bottom"
+            android:gravity="center"
             android:src="@mipmap/ic_launcher" />
     </item>
 </layer-list>
